# Team7CS3321GameScope

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: README.md  main.py
app/api/: README.md  combined.py  rawg.py  steam.py
app/core/: README.md  config.py
app/models/: README.md  response_models.py
app/services/: combined_service.py  rawg_service.py  steam_service.py
app/utils/: README.md  response.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/team7cs3321gamescope/: main.py
backend/src/team7cs3321gamescope/api/: combined.py  rawg.py  steam.py
backend/src/team7cs3321gamescope/core/: config.py
backend/src/team7cs3321gamescope/services/: README.md  combined_service.py  rawg_service.py  steam_service.py
backend/src/team7cs3321gamescope/utils/: response.py
backend/src/tests/: conftest.py  test_combined.py  test_difficulty.py  test_rawg.py  test_rawg_service.py  test_steam.py  test_steam_service.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/test/: App.test.jsx
tests/: conftest.py  test_combined.py  test_difficulty.py  test_rawg.py  test_rawg_service.py  test_steam.py  test_steam_service.py
